test/tests/operators/accept_http/error_max_request_size_zero.txt
error: `max_request_size` must be greater than 0
 --> tests/operators/accept_http/error_max_request_size_zero.tql:5:48
  |
5 | accept_http "127.0.0.1:8080", max_request_size=0 {
  |                                                ^ 
  |
